# Uh-Mazing

./: .gitignore  allfiles.txt
zz-first-try/Uh-Mazing/dres/: pyproject.toml
zz-first-try/Uh-Mazing/dres/data/treebank_3_flat/dev/disfluent/: sw4548.txt  sw4565.txt  sw4608.txt  sw4611.txt  sw4617.txt  sw4618.txt  sw4619.txt  sw4626.txt  sw4628.txt  sw4642.txt  sw4646.txt  sw4682.txt  sw4688.txt  sw4691.txt  sw4697.txt  sw4698.txt  sw4707.txt  sw4720.txt  sw4725.txt  sw4736.txt  sw4785.txt  sw4792.txt  sw4801.txt  sw4812.txt  sw4826.txt  sw4858.txt  sw4868.txt  sw4877.txt  sw4886.txt  sw4890.txt  sw4908.txt  sw4928.txt  sw4936.txt
zz-first-try/Uh-Mazing/dres/data/treebank_3_flat/dev/fluent/: sw4519.txt  sw4548.txt  sw4565.txt  sw4572.txt  sw4603.txt  sw4608.txt  sw4611.txt  sw4617.txt  sw4626.txt  sw4628.txt  sw4633.txt  sw4659.txt  sw4679.txt  sw4682.txt  sw4698.txt  sw4707.txt  sw4720.txt  sw4728.txt  sw4765.txt  sw4785.txt  sw4792.txt  sw4858.txt  sw4859.txt  sw4886.txt  sw4902.txt  sw4908.txt  sw4936.txt
zz-first-try/Uh-Mazing/dres/data/treebank_3_flat/test/disfluent/: sw4019.txt  sw4022.txt  sw4023.txt  sw4026.txt  sw4028.txt  sw4032.txt  sw4036.txt  sw4038.txt  sw4049.txt  sw4060.txt  sw4064.txt  sw4071.txt  (+15 more)
zz-first-try/Uh-Mazing/dres/src/disfluency_removal/: data_2_generate_full_segments.py  utils_data_1.py
zz-first-try/Uh-Mazing/dres/tests/: test_data_1_generate_flat.py  test_data_2_generate_full_segments.py  test_data_4_reconstruct_segment.py  test_evaluate.py  test_utils_decoding.py  test_utils_models.py  test_utils_process_trees.py  tests_utils_dirs.py
(+1788 files in other folders)
