# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disfluency_removal"
version = "1.0.0"
description = "Disfluency Removal."
readme = "readme.md"
authors = [{ name = "Your Name", email = "mariateleki@tamu.edu" }]
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "."

[tool.setuptools.packages.find]
where = ["src"]